# SCOPE

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/ablation/: risk_pressure_penalty.yaml  scope_wo_boundary.yaml  scope_wo_fd.yaml  surface_wo_distill.yaml  surface_wo_support.yaml
configs/data/: womd_waymax.yaml
configs/eval/: eval_closed_loop.yaml  eval_selection.yaml
configs/experiment/: closed_loop.yaml  false_safe_offline.yaml  heldout_response.yaml  (+1 more)
scope/: __init__.py
scripts/: analyze_label_quality.py  build_intervention_groups.py  calibrate.py  eval_boundary.py  eval_candidate_selection.py  eval_closed_loop.py  eval_operator_invariance.py  eval_surface.py  export_tables.py  generate_candidates.py  inspect_womd_scenario.py  make_readme_commands.py  mine_root_scenes.py  preprocess_womd.py  run_waymax_rollouts.py  train.py  visualize_surface.py
tests/: conftest.py  test_ablation_switches.py  test_boundary_loss.py  test_branch_labels.py  test_burden_labels.py  test_calibration.py  test_candidate_feasibility.py  test_candidate_generation.py  test_candidate_selection.py  test_dataset_collate.py  test_feasibility_checks.py  test_forced_dependence.py  test_forced_dependence_formula.py  test_label_derivation.py  test_loss_masks.py  test_model_shapes.py  test_neighbor_graph.py  test_no_future_leakage.py  test_operator_invariance.py  test_readme_commands.py  test_same_root_group_integrity.py  test_schema_masks.py  test_state_conventions.py  test_support_query_split.py  test_waymax_adapter_contract.py  test_womd_adapter_contract.py
(+86 files in other folders)
